Incorporates Lennart's feedback and reading instructions for lectures
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1220 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/computer/computer.tex
+++ b/labs/computer/computer.tex
@@ -41,8 +41,8 @@ Datorn blir en allt viktigare del av samhällets infrastruktur.
 Det är idag få delar av samhället som skulle fungera utan datorkomponenter.
 Persondatorn är en relativt ny uppfinning, 1980-talet, den börjar nu ersättas 
 med en mer portabel persondator, smarttelefonen.
-Väldigt många har en smarttelefon i fickan idag, det är dock ytterst få som vet 
-hur de fungerar.
+Väldigt många använder datorn dagligen, det är dock ytterst få som vet hur de 
+fungerar.
 Med denna uppgift ska du råda bot på detta.
 
 
