--- a/labs/install/literature.tex
+++ b/labs/install/literature.tex
@@ -10,7 +10,8 @@ dina beslut på förhand.
 
 När Ubuntu väl är installerat finns dokumentationen \citep{UbuntuDesktop} som 
 stöd för att börja använda systemet.
-Det kan vara bra att orientera sig i denna för senare enkelt hitta vid behov.
+Det kan vara bra att orientera sig i denna för att senare enkelt hitta vid 
+behov.
 Det rekommenderas att läsa igenom de första fem avsnitten -- ''Welcome to 
 Ubuntu'' till och med ''Log out, power off, switch users'' -- innan 
 installationen.
