--- a/lectures/arch/literature.tex
+++ b/lectures/arch/literature.tex
@@ -1,2 +1,4 @@
 % $Id$
-\dots
+Föreläsningen behandlar innehållet i kapitlen 2 och 
+3 i \cite{Brookshear2012csa}.
+Det rekommenderas att du har läst igenom materialet innan föreläsningen.
