--- a/lectures/datarep/literature.tex
+++ b/lectures/datarep/literature.tex
@@ -1,2 +1,6 @@
 % $Id$
-\dots
+Föreläsningen tar upp kapitel 1 ''Data Storage'' i \citep{Brookshear2012csa}, 
+det rekommenderas att du har läst kapitlet innan föreläsningen.
+
+Innehållet kommer även att kompletteras med delar från kapitlen 2 och 
+6 i \cite{Bosk2011m1c}.
