--- a/lectures/intro/literature.tex
+++ b/lectures/intro/literature.tex
@@ -1,2 +1,7 @@
 % $Id$
-\dots
+Föreläsningen går igenom kursstruktur och organisation.
+Den ger en översikt över undervisning och examination.
+Den motsvarar således att läsa igenom allt kursmaterial och lite därtill.
+
+Utöver detta täcks även kapitel 0 i \citetitle{Brookshear2012csa} 
+\cite{Brookshear2012csa}.
