--- a/lectures/latex/literature.tex
+++ b/lectures/latex/literature.tex
@@ -1,3 +1,4 @@
 % $Id$
-\dots
-
+Inför föreläsningen bör du har läst kapitlen 1--3 i \cite{Oetiker2011lshort}.
+Föreläsningen repeterar detta lite kort och tar därefter upp mer ingående 
+information.
