--- a/lectures/python/literature.tex
+++ b/lectures/python/literature.tex
@@ -1,3 +1,4 @@
 % $Id$
-\dots
-
+Föreläsningen behandlar kapitel 5, 6 och 8 i \cite{Brookshear2012csa}.
+Det bör ha läst dessa innan föreläsningen.
+Utöver detta tillkommer även avsnitten 2--6 i \cite{pythonkramaren1}.
