--- a/studyguide/studyguide.tex
+++ b/studyguide/studyguide.tex
@@ -60,14 +60,14 @@ läsanvisningarna nedan och i respektive laboration.
 
 \citet{Brookshear2012csa} tar upp grunden inom datateknik, den är värd att läsa 
 i sin helhet -- detta rekommenderas!
-De kapitel och avsnitt som behandas i denna kurs är dock enbart kapitlen 0--5 
+De kapitel och avsnitt som behandlas i denna kurs är dock enbart kapitlen 0--5 
 i sina helheter, avsnitten 6.1--6.4, samt avsnitten 9.1 och 9.2.
 
 Det går att använda tidigare upplagor av boken, kapitlen som behandlas i kursen 
 utgår från den senaste upplagan \citep{Brookshear2012csa} och de behandlar 
 följande områden:
 \begin{itemize}
-	\item kapitel 0: introduktion och historia,
+	\item Kapitel 0: introduktion och historia,
 	\item kapitel 1: datalagring och -representation,
 	\item kapitel 2: datamanipulering, datorarkitektur, programexekvering,
 	\item kapitel 3: operativsystem,
