--- a/lectures/present/literature.tex
+++ b/lectures/present/literature.tex
@@ -1,3 +1,3 @@
 % $Id$
-\dots
-
+Föreläsningen behandlar grundläggande rapportskrivning, motsvarande innehållet 
+i \cite{MiUn2012rft}, och tar dessutom upp presentationsteknik.
