Adds more literature and reading instructions, also some code cleanup
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1221 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/literature.bib
+++ b/literature.bib
@@ -146,7 +146,23 @@
     Schlegl, Elisabeth},
   title={The Not So Short Introduction to {\LaTeXe}: or {\LaTeXe} in 157 
     minutes},
+  year={2011},
+  month={apr},
   URL={http://www.ctan.org/tex-archive/info/lshort/english/lshort.pdf},
+}
+@misc{memdesign,
+  author={Wilson, Peter},
+  title={A Few Notes on Book Design},
+  year={2009},
+  month={aug},
+  URL={http://mirrors.ctan.org/info/memdesign/memdesign.pdf},
+}
+@misc{memman,
+  author={Wilson, Peter},
+  title={The Memoir Class for Configurable Typesetting: User Guide},
+  year={2011},
+  month={mar},
+  URL={http://mirrors.ctan.org/macros/latex/contrib/memoir/memman.pdf},
 }
 @misc{Honan2012haa,
 	author={Honan, Mat},
