--- a/lectures/latex/literature.tex
+++ b/lectures/latex/literature.tex
@@ -1,4 +1,6 @@
 % $Id$
-Inför föreläsningen bör du har läst kapitlen 1--3 i \cite{Oetiker2011lshort}.
+Inför föreläsningen bör du har läst kapitlen 1--3 
+i \citetitle{Oetiker2011lshort} \cite{Oetiker2011lshort}.
 Föreläsningen repeterar detta lite kort och tar därefter upp mer ingående 
-information.
+information, bland annat från \citetitle{memdesign} \cite{memdesign} och 
+\citetitle{memman} \cite{memman}.
