Work around for labels-may-have-changed bug
Whenever there is a only a single \item in inst-aims.tex there will be endless
reports of ``Labels may have changed''.

git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1222 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/install/aims.tex
+++ b/labs/install/aims.tex
@@ -1,2 +1,4 @@
 % $Id$
-\item installera program i UNIX-lik miljö och Windowsmiljö.
+% Author:	Daniel Bosk <daniel.bosk@miun.se>
+\item installera program i UNIX-lik miljö.
+\item installera program i Windowsmiljö.
