--- a/studyguide/studyguide.tex
+++ b/studyguide/studyguide.tex
@@ -43,7 +43,7 @@ Kursen ger även en introduktion till rapportskrivande och presentationer.
 
 Mer specifikt, efter genomgången kurs ska du kunna:
 \begin{itemize}
-  \input{install-aim.tex}
+  \input{inst-aim.tex}
   \input{term-aim.tex}
   \input{pylab-aim.tex}
   \input{computer-aim.tex}
@@ -150,7 +150,7 @@ Undervisningen förutsätter att du följer dessa riktlinjer.
 \input{intro-lit.tex}
 
 \subsection{Laboration L0 Installation}
-\input{install-lit.tex}
+\input{inst-lit.tex}
 
 \subsection{Föreläsning om datarepresentation}
 \input{datarep-lit.tex}
