Adds note on reference systems
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1223 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/computer/computer.tex
+++ b/labs/computer/computer.tex
@@ -101,10 +101,12 @@ i \prettyref{sec:Syfte}, är följande:
   \item Tabeller ska även de ha beskrivande texter.
   \item Dokumentet ska ha en passande titel, författare, datum och 
     innehållsförteckning.
-    Det ska inte finnas några sidbrytningar, likt denna lydelse.
+    Det ska inte finnas några sidbrytningar, likt i denna lydelse.
   \item Omfattningen ska vara omkring sex (6) sidor totalt.
   \item Texten ska vara typsatt med LaTeX, dokumentklassen ska vara 
     \emph{article}.
+  \item Referenser ska skrivas enligt \citetitle{IEEEcitation} 
+    \cite{IEEEciteation}.
 \end{itemize}
 
 
