--- a/literature.bib
+++ b/literature.bib
@@ -350,3 +350,10 @@
   URL={http://benchmarksgame.alioth.debian.org/},
   note={Hämtad den 19 augusti 2013},
 }
+@misc{IEEEcitation,
+  author={Graffox, D},
+  title={IEEE Citation Reference},
+  year={2009},
+  month={sep},
+  URL={http://www.ieee.org/documents/ieeecitationref.pdf},
+}
