--- a/project/project.tex
+++ b/project/project.tex
@@ -265,6 +265,7 @@ Utöver detta föreligger följande krav:
   \item Rapportens studie ska innehålla minst en matematisk formel.
   \item Rapportens disposition ska följa en akademisk rapport och den ska vara 
     skriven på formell akademisk svenska eller engelska.
+  \item Referenser ska ges enligt \citetitle{IEEEcitation} \cite{IEEEcitation}.
 \end{itemize}
 
 Rapporten presenteras även muntligen vid tillfälle för helklass, omfattning på 
