Adds grading criteria, removes IEEE refs
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1224 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/project/project.tex
+++ b/project/project.tex
@@ -265,12 +265,25 @@ Utöver detta föreligger följande krav:
   \item Rapportens studie ska innehålla minst en matematisk formel.
   \item Rapportens disposition ska följa en akademisk rapport och den ska vara 
     skriven på formell akademisk svenska eller engelska.
-  \item Referenser ska ges enligt \citetitle{IEEEcitation} \cite{IEEEcitation}.
 \end{itemize}
 
 Rapporten presenteras även muntligen vid tillfälle för helklass, omfattning på 
 presentationen är 14--15 minuter.
 Slides är obligatoriskt för godkänd presentation.
+
+\subsection{Betygskriterier}
+
+Rapporten betygsätts enligt följande kriterier:
+\begin{description}
+  \item[E] Rapporten är vetenskapligt skriven.
+  \item[D] Majoriteten av innehållet uppfyller kraven för C.
+  \item[C] Rapporten är vetenskapligt skriven med gedigen metod, detaljerad 
+    teori med referenser till goda källor.
+  \item[B] Majoriteten av innehållet uppfyller kraven för A.
+  \item[A] Rapportens innehåll håller hög vetenskaplighet med gedigen metod som 
+    kritiskt diskuteras, detaljerad teori och referenser till mycket goda 
+    källor.
+\end{description}
 
 
 \printbibliography
