Adds minor corrections for literature
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1225 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/literature.bib
+++ b/literature.bib
@@ -221,11 +221,11 @@
 	author={Bosk, Daniel},
 	title={Matematik 1c},
 	booktitle={En formalisering av matematiken i svensk gymnasieundervisning},
-	publisher={Kungl. Tekniska Högskolan},
+  chapter={Bilaga B},
+	publisher={Kungl. Tekniska högskolan},
 	address={Stockholm},
 	year={2011},
-	URL={http://www.bosk.se/masters-thesis/kompendium.pdf},
-	chapter={Bilaga B}
+  URL={http://www.bosk.se/masters-thesis/kompendium.pdf},
 }
 @manual{bsdman,
 	organization={OpenBSD},
