Makes some clarifications after talking to Karl P
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1226 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/studyguide/studyguide.tex
+++ b/studyguide/studyguide.tex
@@ -205,8 +205,8 @@ ställas till förfogande för andra sökande.
 Vad gäller den övriga examinationen på kursen kommer det för redovisningar att 
 ges ett redovisningstillfälle under kursens gång, detta kommer att vara under 
 ordinarie tentamensvecka.
-Därefter ges ytterligare två redovisningstillfällen, dessa förläggs i de 
-efterföljande omtentamensperioderna.
+Därefter ges ytterligare två redovisningstillfällen, dessa förläggs inom ett 
+år.
 Alla dessa tillfällen kommer att finnas i kursens schema (i studentportalen).
 
 De slutdatum som finns för dessa tillfällen är strikta.
@@ -216,18 +216,18 @@ Efter det tredje redovisningstillfället hänvisas till redovisningstillfällena
 under nästkommande kursomgång.
 
 För skriftliga inlämningsuppgifter gäller att dessa rättas en gång under 
-kursens gång, i samband med slutdatum för inlämning, därefter ytterligare två 
-gånger i de kommande omtentamensperioderna.
+kursens gång, senast i samband med slutdatum för inlämning, därefter 
+ytterligare två gånger i de kommande omtentamensperioderna.
 Totalt erbjuds tre försök per år.
 Därefter hänvisas till nästa kursomgång.
 
-Ingen handledning kommer att ges efter kursens slut, det vill säga efter det 
-sista schemalagda handledningstillfället.
+Ingen handledning planeras efter kursens slut, det vill säga efter det sista 
+schemalagda handledningstillfället.
 Om du inte hinner bli klar med uppgifterna inom kursens tidsramar och du vill 
-ha vidare handledning av lärare krävs att du omregistrerar dig på nästa 
-kursomgång.
-Omregistrering på kurs sker i mån om plats och ligger lägst i
-prioriteringslistan, alla förstagångssökande och reserver kommer att ha förtur.
+vara garanterad handledning av lärare krävs att du omregistrerar dig på nästa 
+kurstillfälle.
+Omregistrering på kurstillfälle sker i mån om plats, alla förstagångssökande 
+och reserver kommer att prioriteras.
 
 Om du vid kursslut har majoriteten av kursens moment kvar att göra hänvisas du 
 direkt till nästa kursomgång, då krävs omregistrering.
