First draft of intro slides
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1254 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/intro/intro.tex
+++ b/lectures/intro/intro.tex
@@ -5,7 +5,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage[english,swedish]{babel}
-\usepackage[hyphens]{url}
+\usepackage{url}
 \usepackage{varioref,prettyref}
 \usepackage{graphicx}
 \usepackage[today,nofancy]{svninfo}
@@ -25,8 +25,8 @@
 \setbeamertemplate{footline}{\insertframenumber}
 
 \title[Introduktion]{%
-	Introduktion till kursen\\
-	DT001G Informationsteknologi grundkurs
+  Introduktion till \\
+  datateknik och datavetenskap
 }
 \author{Daniel Bosk\footnote{%
 	\tiny
@@ -80,48 +80,86 @@
 
 \subsection{Schema}
 \begin{frame}{Schema}
-	\dots
+  \begin{itemize}
+    \item Schemat finns i det centrala schemat i Studentportalen.
+    \item Detta synkroniseras ej med kalendern i lärplattformen.
+    \item Det är de tillfällen som ligger i schemat som gäller!
+  \end{itemize}
+  \begin{itemize}
+    \item Daniel ger föreläsningar och håller övningarna, examinerar även 
+      projektetrapporten.
+    \item Alexandra och Tobias handleder laborationer och projekt, de rättar 
+      även laborationerna.
+  \end{itemize}
 \end{frame}
 
 \subsection{Lärplattform}
 \begin{frame}{Lärplattform}
+  \begin{itemize}
+    \item Det är Lärplattformen 2.0 som används för kursen.
+    \item Under avsnittet ''Kursmaterial'' finns inspelningarna av 
+      föreläsningarna och slides.
+    \item Under avsnittet ''Examination'' finns alla inlämningslådor.
+    \item I respektive inlämningslåda finns en länk till lydelsen för 
+      uppgiften.
+  \end{itemize}
 \end{frame}
 
 \subsection{Litteratur}
 \begin{frame}{Litteratur}
-	\emph{Computer science: an overview} \cite{Brookshear2012csa}.
+  \begin{itemize}
+    \item \citetitle{Brookshear2012csa} \cite{Brookshear2012csa}.
+    \item \citetitle{nemeth2011ual} \cite{nemeth2011ual}.
+    \item \citetitle{pythonkramaren1} \cite{pythonkramaren1}.
+    \item \citetitle{Oetiker2011lshort} \cite{Oetiker2011lshort}.
+  \end{itemize}
 \end{frame}
 
 \subsection{Examination}
-\begin{frame}{Examination}
-	\dots
-\end{frame}
 \begin{frame}{Laborationer}
-	\dots
-\end{frame}
-\begin{frame}{Seminarier}
-	\dots
+  \begin{itemize}
+    \item L0 Installationer
+    \item L1 Terminalen
+    \item L2 Programmering med Python
+    \item L3 Datorn
+  \end{itemize}
 \end{frame}
 \begin{frame}{Projekt}
-	\dots
+  \begin{itemize}
+    \item Projektrapport
+    \item Projektpresentation
+  \end{itemize}
 \end{frame}
 
 
-\section[Historia]{Datavetenskapens historia}
-\begin{frame}{Datavetenskapens historia}
-	\dots
+\section{Datateknik och datavetenskap}
+
+\subsection{Datavetenskapens historia}
+\begin{frame}{\insertsubsectionhead}
+  \begin{description}
+    \item[2500 f.v.t.] Euklides algoritm.
+    \item[1600-talet] Blaise Pascal och Gottfried Wilhelm von Leibniz.
+    \item[1800-talet] Charles Babbage och Augusta Ada Byron.
+    \item[1930-talet] Alan Turing.
+  \end{description}
 \end{frame}
 
 
-\section[Introduktion]{Introduktion till datavetenskap}
-\begin{frame}{Introduktion till datavetenskap}
-	\dots
+\section{Vetenskapen om algoritmer}
+
+\subsection{Algoritmer}
+\begin{frame}{\insertsubsectionhead}
+\end{frame}
+
+\subsection{Abstraktionslager}
+\begin{frame}{\insertsubsectionhead}
 \end{frame}
 
 
 %%%%%%%%%%%%%%%%%%%%%%
 
-\begin{frame}{Referenser}
+\begin{frame}[allowframebreaks]{Referenser}
+  \small
   \printbibliography
 \end{frame}
 
