Corrects errors found during lecture
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1258 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/labs/computer/computer.tex
+++ b/labs/computer/computer.tex
@@ -106,7 +106,7 @@ i \prettyref{sec:Syfte}, är följande:
   \item Texten ska vara typsatt med LaTeX, dokumentklassen ska vara 
     \emph{article}.
   \item Referenser ska skrivas enligt \citetitle{IEEEcitation} 
-    \cite{IEEEciteation}.
+    \cite{IEEEcitation}.
 \end{itemize}
 
 
