Corrects typo: ITM -> IKS
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1279 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/arch/arch.tex
+++ b/lectures/arch/arch.tex
@@ -59,7 +59,7 @@
   För att se en sammanfattning och kopia av licenstexten besök URL 
   \url{http://creativecommons.org/licenses/by-sa/2.5/se/}.
 }}
-\institute[MIUN ITM]{%
+\institute[MIUN IKS]{%
   %Department of Information and Communication Systems (ICS),\\
   %Mid Sweden University, Sundsvall.
   %
