Adds some to-add sections
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1278 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/datarep/datarep.tex
+++ b/lectures/datarep/datarep.tex
@@ -59,7 +59,7 @@
   För att se en sammanfattning och kopia av licenstexten besök URL 
   \url{http://creativecommons.org/licenses/by-sa/2.5/se/}.
 }}
-\institute[MIUN ITM]{%
+\institute[MIUN IKS]{%
   %Department of Information and Communication Systems (ICS),\\
   %Mid Sweden University, Sundsvall.
   %
@@ -87,6 +87,7 @@
   \tableofcontents
   % You might wish to add the option [pausesections]
 \end{frame}
+
 \begin{frame}
   \input{literature.tex}
 \end{frame}
@@ -325,7 +326,6 @@
   \end{table}
 \end{frame}
 
-
 \subsection{Grindar}
 
 \begin{frame}{\insertsubsectionhead}
@@ -376,6 +376,19 @@
     \item Unicode
     \item \dots
   \end{itemize}
+\end{frame}
+
+\subsection{Komprimering}
+
+\begin{frame}{\insertsubsectionhead}{Huffmankodning}
+\end{frame}
+
+\begin{frame}{\insertsubsectionhead}{Lempel--Ziv--Welsh}
+\end{frame}
+
+\subsection{Datakommunikation}
+
+\begin{frame}{\insertsubsectionhead}{Kommunikationsfel}
 \end{frame}
 
 
