Final lecture version
git-svn-id: svn+ssh://ver.miun.se/svn/kursmaterial@1284 bec8c38e-25c0-4e72-9155-f4ef22546adc

--- a/lectures/arch/arch.tex
+++ b/lectures/arch/arch.tex
@@ -109,6 +109,26 @@
 \subsection{CPU}
 
 \begin{frame}{\insertsubsectionhead}
+  \begin{itemize}
+    \item Aritmetisk-/logisk enhet
+    \item Kontrollenhet
+    \item Registerenhet
+  \end{itemize}
+  \begin{itemize}
+    \item Buss
+    \item Minne
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{\insertsubsectionhead}
+  \begin{itemize}
+    \item Från början var programmen hårdkodade.
+    \item Började se program även som data.
+    \item Idéen om att lagra program som data.
+  \end{itemize}
+\end{frame}
+
+\begin{frame}{\insertsubsectionhead}{Kopplingarna}
 \end{frame}
 
 \subsection{Maskinkod}
@@ -117,10 +137,10 @@
 \end{frame}
 
 \begin{frame}{\insertsubsectionhead}{Representera data}
-  \begin{description}
-    \item[Little endian] \dots
-    \item[Big endian] \dots
-  \end{description}
+  \begin{itemize}
+    \item Little endian
+    \item Big endian
+  \end{itemize}
 \end{frame}
 
 \subsection{Programexekvering}
